# exam-solver-gateway

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  build-desktop.ps1  build-exe.ps1  drizzle.config.ts  electron-main.js  electron-preload.js  next.config.mjs  package.json  server-entry.js  start.sh  tsconfig.json  vitest.config.mjs
bridge-rs/: Cargo.toml
bridge-rs/src/: main.rs
browser-extension/chatgpt-web-autoconnect/: README.md  background.js  chatgpt-injector.js  dashboard-bridge.js  gemini-injector.js  grok-injector.js  manifest.json  popup.css  popup.html  popup.js
cloud/: README.md  package.json
docs/: ARCHITECTURE.md
open-sse/config/: appConstants.js  providerModels.js  providers.js
open-sse/executors/: codex.js
open-sse/handlers/: chatCore.js
open-sse/services/: model.js  usage.js
open-sse/utils/: sessionManager.js  stream.js  streamHelpers.js  usageTracking.js
public/: manifest.webmanifest
scripts/: migrate-sqlite.ts
src/: dashboardGuard.js  proxy.js
src/app/: globals.css  layout.js  manifest.js
src/i18n/: runtime.js  useRuntimeLocale.js
src/lib/: 9remoteManager.js  adminAuth.js  authGateState.js  chatgptWebSentinel.js  connectionHealth.js  dashboardBootstrap.js  diagnosticHelpers.js  diagnostics.js  injectRelay.js  injectRelayWs.js  localDb.js  logger.js  rateLimit.js  requestContext.js  requestDetailsDb.js  serverCache.js  serverRuntimeConfig.js  updater.js  usageDb.js  versionStatus.js  webBridgeControlPlane.js  webBridgeInternalAuth.js  webBridgeMessageParts.js  webBridgePromptSanitizer.js  webBridgeSidecar.js  (+3 more)
(+270 files in other folders)
